--- a/FindMyDrink/res/values/strings.xml
+++ b/FindMyDrink/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">FindMyDrink</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="adddrink">New Drink</string>
+    <string name="search">Search</string>
+    <string name="blog">Blog</string>
+    <string name="invite_friends">Invite Friends</string>
+    <string name="checkin">Checkin</string>
+    <string name="events">Events</string>
 
 </resources>
