--- a/FindMyDrink/res/values/strings.xml
+++ b/FindMyDrink/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">FindMyDrink</string>
+    <string name="app_name">Find My Drink</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="adddrink">New Drink</string>
@@ -10,5 +10,7 @@
     <string name="invite_friends">Invite Friends</string>
     <string name="checkin">Checkin</string>
     <string name="events">Events</string>
+    <string name="btn_logout_from_google">Logout from Google</string>
+    <string name="btn_revoke_access">Revoke Access</string>
 
 </resources>
